hw_minikube/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
meta
  name: redis-servise
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: master
        image: bitnami/redis:6.0.13-alpine # Версия зафиксирована
        ports:
          - containerPort: 6379
