hw_minikube/nginx-service.yaml
apiVersion: v1
kind: Service
meta
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
