hw_minikube/redis-service.yaml
apiVersion: v1
kind: Service
meta
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP  # Для внутреннего трафика в кластере
