hw_minikube/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
meta
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Убедись, что контроллер установлен (minikube: minikube addons enable ingress)
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
